Source/WebKit2/Shared/EditorState.cpp
@@ -42,12 +42,6 @@ void EditorState::encode(IPC::ArgumentEncoder& encoder) const
     encoder << isInPlugin;
     encoder << hasComposition;
 
-#if PLATFORM(MAC)
-    encoder << fontName;
-    encoder << fontSize;
-    encoder << selectionHasMultipleFonts;
-#endif
-
 #if PLATFORM(IOS)
     encoder << isReplaceAllowed;
     encoder << hasContent;
@@ -95,17 +89,6 @@ bool EditorState::decode(IPC::ArgumentDecoder& decoder, EditorState& result)
 
     if (!decoder.decode(result.hasComposition))
         return false;
-
-#if PLATFORM(MAC)
-    if (!decoder.decode(result.fontName))
-        return false;
-
-    if (!decoder.decode(result.fontSize))
-        return false;
-
-    if (!decoder.decode(result.selectionHasMultipleFonts))
-        return false;
-#endif
 
 #if PLATFORM(IOS)
     if (!decoder.decode(result.isReplaceAllowed))
